data/derived/comb/progs/unify/prog8300.ml.out
Characters 56-62:
  let stringOfList f l = fun l -> sepConcat("; ")(List.map(f, l));;
                                                          ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
